# rust-api

./: Cargo.toml  README.md  Rocket.toml
src/: main.rs
src/catchers/: mod.rs
src/fairings/: mod.rs
src/responder/: mod.rs
src/routes/: mod.rs
src/routes/bajo_jajo/: mod.rs
src/routes/home/: mod.rs
src/routes/send_message/: mod.rs
src/routes/spotify/: mod.rs
