[package]
name = "api"
version = "0.1.0"
authors = ["pxseu <57842793+pxseu@users.noreply.github.com>"]
edition = "2018"

[dependencies]
url = "2.2.0"
rand = "0.7.3"
rocket = "0.4.6"
serde = "1.0.117"
dotenv = "0.15.0"
serde_json = "1.0.59"
serde_derive = "1.0.117"
rocket_contrib = "0.4.6"
ureq = { version = "1.5.2", features = ["json"] }
